# full-stack-rust

./: Cargo.toml  Makefile  readme.md
api/: Cargo.toml
api/src/: main.rs  socket.rs  store.rs  user.rs
api/src/messages/: add.rs  list.rs
api/src/socket/: broker.rs  connect.rs  connection.rs
api/src/socket/broker/: actor.rs  broadcast.rs  connect.rs  disconnect.rs
api/src/socket/connection/: actor.rs  msg_in.rs  msg_out.rs
api/src/store/: messages.rs  users.rs
api/src/user/: me.rs  signin.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/entity/: message.rs  user.rs
shared/src/lib/: json.rs
shared/src/lib/json/: date.rs
web/: Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html  tailwind.config.js
web/src/: app.rs  components.rs  error.rs  hooks.rs  main.rs  services.rs
web/src/components/: username_dialog.rs
web/src/hooks/: use_message_stream.rs
web/src/pages/: chat.rs
web/src/services/: messages.rs  request.rs  users.rs
web/styles/: output.css
