[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
chrono = "0.4.26"
actix-web = "4"
serde = "1.0.164"
serde_json = "1.0.96"
actix-cors = "0.6.4"
uuid = { version = "0.8", features = ["v4", "serde"] }
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-identity = "0.5.2"
ordered-map = "0.4.2"
lazy_static = "1.4.0"
futures-util = "0.3.28"
actix-web-grants = "3.0.1"
actix = "0.13.0"
actix-web-actors = "4.2.0"
actix-broker = "0.4.3"
rand = "0.8.5"
env_logger = "0.10.0"


