[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shared = { path = "../shared" }
gloo-net = "0.2.6"
wasm-bindgen-futures = "0.4.37"
yew = { version="0.20", features=["csr"] }
reqwest = "0.11.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
lazy_static = "1.4.0"
thiserror = "1.0.40"
wasm-bindgen = "0.2.87"
yew-hooks = "0.2.0"
gloo-console = "0.2.3"
chrono = "0.4.26"
web-sys = { version = "0.3.64", features = ["HtmlDialogElement"] }
yew-websocket = "1.0.0"
anyhow = "1.0.71"
gloo-timers = "0.2.6"
tracing = "0.1.37"
